Fix app footer alignment issue

--- a/components/AppFooter.module.css
+++ b/components/AppFooter.module.css
@@ -179,7 +179,9 @@
 .mainFooter_leftCol {
   flex: 1;
 }
-
+.mainFooter_RightCol {
+  display: block;
+}
 .subscribeBtn {
   width: 220px;
   background: #EAEAEA;
